<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalculatorActivity" >

    <EditText
        android:id="@+id/input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/input_prompt"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/equalSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/equals"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnOption1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnOption2"
        android:layout_alignRight="@+id/btnOption2"
        android:onClick="calculateTip"
        android:text="@string/option1" />

    <Button
        android:id="@+id/btnOption3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/btnOption2"
        android:layout_below="@+id/btnOption2"
        android:onClick="calculateTip"
        android:text="@string/option3" />

    <TextView
        android:id="@+id/tipOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/equalSign"
        android:layout_toRightOf="@+id/equalSign"
        android:text="@string/tipOutput"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnOption2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input"
        android:layout_centerVertical="true"
        android:onClick="calculateTip"
        android:text="@string/option2" />

    <TextView
        android:id="@+id/totalOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/totalOutput"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tipHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tipPerctHeader"
        android:layout_toRightOf="@+id/equalSign"
        android:text="@string/tipHeader" />

    <TextView
        android:id="@+id/tipPerctHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnOption1"
        android:layout_toLeftOf="@+id/equalSign"
        android:text="@string/tipPerctHeader"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
